--- a/cpp_notebook/primer/ch-01.md
+++ b/cpp_notebook/primer/ch-01.md
@@ -1,14 +1,12 @@
 # chapter 1: getting started
 
-not gonna take traditional notes on the material, just some core ideas that are specific to c++ / that i haven't encountered before in other languages and some additional external links / other things to follow up on.
-
 ## new core ideas
 - iostream library
 	- **output operator <<** and **input operator >>**
 	- istream, ostream
 	- **cin, cout, cerr, clog**
 	- behind the scenes of chaining cout / cin statements
-	- using istream state as a~~~~ condition (see 1.4.3)
+	- using istream state as a condition (see 1.4.3)
 - **namespaces** and the **scope operator ::**
 	- namespaces allow us to avoid inadvertent collisions between the names we define and uses of those same names inside a library.
 	- all the names defined by the standard library are in the *std* namespace.
