--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -34,7 +34,7 @@ int main() {
 	- *copy initialize* copies the initializer on the right-hand side of an = sign. this can be used with a single initializer.
 	- *direct initialize* omits the = sign and can be used with initializers that consist of more than one value.
 ~~~
-// how i initialize a string (refer to Primer for complete list)
+// how i initialize a string
 string s1; // default initialization to the empty string
 string s2 = s1; // s2 is a copy of s1 (copy initialized)
 string s3 = "value"; // s3 is a copy of the string literal (copy initialized)
@@ -42,6 +42,15 @@ string s4(n, 'c'); // initialize s4 with n copies of the character 'c' (direct i
 ~~~
 
 - **classes can define how objects are created/initialized, operations that are called by name, and what various operator symbols (<<, +, etc.) mean when applied to objects of the class' type.**
+- string operations
+	- ***size()*** returns the **unsigned** type *string::size_type*
+	- the ***subscript operator [ ]*** also takes a *string::size_type* **(unsigned)** value that denotes the zero-indexed position of the character we want to access and returns a *reference* to that character.
+		- **we generally do not need to know / care about the precise type (just use *auto* and *decltype(s.size()) *), but we need to remember that indexing is generally unsigned!**
+		- valid range is >=0 && < size()
+			- **the result of using an index out of range is undefined.**
+			- **subscripting an empty string is undefined!**
+		- any time we use a subscript, we must ensure that there is a value at the given location.
+			- in this use case, we would check that the string isn't empty before using the [ ] operator.
 ~~~
 // string operations
 // 's' is string, 'os' is output stream, 'is' is input stream
@@ -62,47 +71,28 @@ s1 = s2 // replaces characters in s1 with a copy of s2
 s1 == s2 // !=, <, <=, >, >=
 ~~~
 
-- the ***subscript operator [ ]*** takes a *string::size_type* **(unsigned)** value that denotes the zero-indexed position of the character we want to access and returns a *reference* to that character.
-	- ***size()*** also returns the unsigned type *string::size_type*
-		- **we generally do not need to know / care about the precise type (just use *auto* and *decltype(s.size()) *), but we need to remember that it is unsigned!**
-	- valid range is >=0 && < size()
-		- **the result of using an index out of range is undefined.**
-		- **subscripting an empty string is undefined!**
-	- any time we use a subscript, we must ensure that there is a value at the given location.
-		- in this use case, we would check that the string isn't empty before using the [ ] operator.
-- concatenation
+- string concatenation
 	- the string library lets us convert both character literals and character string literals to strings (so we can automatically concatenate them).
 	- **at least one operand to each + operator must be of *string* type.**
 	- **string literals are not of type *string*.** (from the C++ standard library)
 ~~~
 // examples of legal and illegal concatenation
 string s4 = s1 + ", " + s2 + '\n'; // ok
-string s5 = "hello" + ", " + s2; // error: no string operand for first + operator
+string s5 = "hello" + ", " + s2; // ERROR: no string operand for first + operator
 string s6 = s1 + ", " + "world"; // ok, right equivalent to (s1 + ", ") + "world"
 ~~~
 
-- analyzing the characters in a string
+- processing strings
 	- ***cctype*** library has functions for interpreting characters and changing characteristics like upper/lowercase
 	- **range-based *for* loop** is good for processing every character in a string. (C++11)
 		- the *auto* type specifier is useful here.
-~~~
-// example of using range for and the cctype library function ispunct
-string s = "hello world!!!";
-decltype(s.size()) punct_cnt = 0;
-for (auto c : s) {
-	if (ispunct(c))
-		++punct_cnt;
-}
-cout << punct_cnt << '\n';
-~~~
-
-- changing the characters in a non*const* string
-	- **to change the value of the characters in string, we must define the loop variable as a reference type.**
+	- **to change the value of the characters in (nonconst) string, we must define the loop variable as a reference type.**
 ~~~
 // example of changing the characters in a string by reference
 string s = "hello world!!!";
-for (auto &c : s)
+for (auto &c : s) {
 	c = toupper(c); // cctype function returns uppercase version of argument
+}
 cout << punct_cnt << '\n';
 ~~~
 
@@ -123,11 +113,6 @@ cout << punct_cnt << '\n';
 	- to specify which actual class to instantiate from a template, we supply additional information inside angle brackets following the template's name.
 - a vector is a *container* containing other objects all of the same type.
 	- we specify the type of the objects a vector will hold inside angle brackets.
-~~~
-vector<int> ivec; // ivec holds objects of type int
-vector<vector<string>> // vector whose elements are vectors containing strings
-~~~
-
 - vector initialization
 	- default initialize to an empty vector of the specified type.
 		- the most common way of using vector is to define an empty vector to which elements are added as their values become known at runtime.
@@ -136,7 +121,7 @@ vector<vector<string>> // vector whose elements are vectors containing strings
 	- direct initialize from a specified number of elements (with the option of providing a default initial value for all elements)
 	- direct initialize from an array (using array pointers, see section below on arrays)
 ~~~
-// how i initialize a vector (refer to Primer for complete list)
+// how i initialize a vector
 vector<T> v1; // default initialize empty vector of type T
 vector<T> v2 = v1; // v2 has a copy of each element in v1
 vector<T> v3 = {a, b, c}; // v3 is copy-list-initialized
@@ -145,11 +130,11 @@ vector<T> v5(n); // v5 has n elements each with type T's default-initializing va
 vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector corresponding to a separate int array
 ~~~
 
-- operations with vector
+- vector operations
 	- ***push_back*** takes a value and "pushes" it as a new last element onto the "back" of the vector (appends value to vector).
 		- **note that a range *for* loop must not change the size of the sequence over which it is iterating.**
 	- other operations on vector are similar to operations on string.
-		- in a range *for*, use a *reference* to assign new values to the elements in a vector.
+		- in a range *for*, use a reference to assign new values to the elements in a vector.
 		- **the *size()* operation and *subscript operator [ ]* use an unsigned type** (*vector< T >::size_type*).
 			- like with strings, subscript returns a *reference* to the element at the specified index.
 			- **remember to only subscript in range and on nonempty vectors, otherwise behavior is undefined!**
@@ -171,7 +156,7 @@ vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector correspondin
 
 ### new core ideas
 - **all library containers (and string) support iterators.**
-- types that have iterators have members that return iterators.
+- types that support iterators have members that return iterators.
 	- iterators have type *(container)::iterator* or *(container)::const_iterator* 
 		- in general, we don't know / care about the precise type that an iterator has (just use *auto* to initialize).
 	- ***begin()*** for iterator on the first element.
@@ -238,6 +223,12 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 		- automatically adds the **null character '\0'** at the end of every string literal!
 	- **we cannot copy-initialize an array from another array or assign arrays to each other.**
 	- we cannot initialize an array from a vector, but we can initialize a vector from an array (see in vector section).
+~~~
+// how i initialize arrays
+T arr[] = {a, b, c};
+T arr[n] = {}; // zeroed array (value intialization)
+~~~
+
 - processing 
 	- similar to vectors and strings, with the exception that arrays are fixed size.
 	- *range for* and *subscript operator [ ]* both access elements of array.
@@ -261,9 +252,10 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 		- we can use a null-terminated character array anywhere that we use a string literal. (for example, initializing a C++ standard library *string*).
 
 ### misc conventions and tips
+- *T arr[n] = {}* for element value-initialization only works in C++, *int arr[n] = {0}* works in both C and C++.
 - read complicated array declarations starting with the array name and going out.
 ~~~
-// misc complicated array declarations
+// complicated array declarations
 int *ptrs[10]; // ptrs is an array of ten pointers to int
 int (*pArray)[10] = &arr; // pArray points to an array of 10 ints
 int (&refArray)[10] = arr; // refArray refers to an array of 10 ints
@@ -281,7 +273,7 @@ int myMatrix[3][4] = {
 	{4, 5, 6}; // default initializes missing elements
 	{8, 9, 10, 11};
 };
-myMatrix[1][3] = 7; // assign default-initialized element
+myMatrix[1][3] = 7; // assign previously default-initialized element to 7
 
 // references are necessary to avoid automatic array-to-pointer conversion!
 for (auto &row : myMatrix) {
@@ -296,3 +288,4 @@ for (auto &row : myMatrix) {
 ## things to follow up on
 - my program compiles and runs without the #include directive for cctype. is it necessary/good practice to include it anyways?
 	- same for *string*
+	- answer(?) - there is overlap in what headers define.
