more small edits

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -55,12 +55,14 @@
 	- **initialization is not assignment**, even though they both use the = symbol. 
 		- initialization happens when a variable is given a value when it is created.
 		- assignment obliterates an object's current value and replaces that value with a new one.
-	- list initialization (C++11)
+	- ***list initialization*** (C++11)
 		- braced lists of initializers can be used.
 		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information (*int* type object being list-initialized with a *long double* initializer)
-	- default initialization
-		- without an explicit initializer, built-in type variables defined outside any function body are initialized to zero, defined inside a function are uninitialized.
-		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers (like std::string)
+	- ***default initialization***
+		- **without an explicit initializer, built-in type variables defined inside a function are uninitialized** 
+			- defined outside any function body are initialized to zero.
+		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers
+			- for example, *std::string* default initializes to empty string no matter where it's defined.
 - declaration vs definition
 	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
@@ -78,7 +80,7 @@ extern double pi = 3.14; // defines pi (overriding extern keyword)
 - **initialize every object of built-in type!**
 	- uninitialized variables cause runtime problems!
 - define variables close to where they're first used.
-- **almost always a bad idea** to define a local variable with the same name as a global variable that the function uses or might use.
+- **avoid defining a local variable with the same name as a global variable that the function uses or might use.**
 	- the :: scope operator can override default scoping rules, but again, try to avoid this.
 
 
@@ -94,7 +96,7 @@ extern double pi = 3.14; // defines pi (overriding extern keyword)
 int i = 1024, *p = &i, &r = i;
 ~~~
 
-- an **lvalue reference** (signified by a *declarator* with the *&* type modifier) refers to (is another name for) its initializer.
+- an **lvalue reference** (signified by a *declarator* with the *&* type modifier) refers to (**is another name for**) its initializer.
 	- **refers to a single object (its initializer) throughout its lifetime.**
 	- **references are not objects themselves.**
 - a **pointer** (signified by a *declarator* with the * type modifier) points to another type.
@@ -116,7 +118,7 @@ int i = 1024, *p = &i, &r = i;
 - references to pointers, pointers to pointers
 
 ### misc conventions and tips
-- the & and * symbols used in declarations have nothing to do with the & (address-of) and * (dereference) operators.
+- **the & and * symbols used in declarations have nothing to do with the & (address-of) and * (dereference) operators.**
 	- think of them as completely different symbols!
 - older programs might use a preprocessor variable named *NULL* from *cstdlib* to initialize a null pointer.
 	- modern c++ should use *nullptr* instead.
@@ -181,7 +183,7 @@ const double *cptr = &dval; // pointer to object of type const double
 	- **defining a pointer as a pointer to const affects only what we can do with the pointer.**
 	- we can use a pointer to const to point to a **non**const object
 	- we can store the address of a const object only in a pointer to const.
-- **important to remember that there is no guarantee that an object pointed to by a pointer to const won't change by other means.**
+- **important to remember that there is no guarantee that an object pointed to by a *pointer to const* won't change by other means.**
 
 ~~~
 int errNumb = 0;
@@ -201,7 +203,7 @@ const double *const pip = &pi; // const pointer to object of type const double
 	
 ***constant expressions*** (also see ch6)
 
-- constant expressions are expressions whose values cannot change and that can be evaluated at compile time.
+- **constant expressions are expressions whose values cannot change and that can be evaluated at compile time.**
 	- can be a literal or a const object that is initialized from a constant expression.
 	- we can have functions that are constant expressions (see ch6) and can be used as constant expression initializers.
 - we can ask the compiler to verify that an object's initializer is a constant expression by using the ***constexpr*** keyword in the object's declaration. (C++11)
@@ -266,4 +268,5 @@ struct Sales_data {
 
 ## ch2 things to follow up on
 - what does it mean to be a pointer "one location past the end of an object"
+	- answer: see iterators and array pointers (ch3)
 - if you bind a reference to const to a nonconst object, then change the nonconst object directly, does the reference to const also change when you next use it? my intuition says yes, but the temporary object concept says no.
