--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -45,7 +45,7 @@ string s4(n, 'c'); // initialize s4 with n copies of the character 'c' (direct i
 - string operations
 	- ***size()*** returns the **unsigned** type *string::size_type*
 	- the ***subscript operator [ ]*** also takes a *string::size_type* **(unsigned)** value that denotes the zero-indexed position of the character we want to access and returns a *reference* to that character.
-		- **we generally do not need to know / care about the precise type (just use *auto* and *decltype(s.size()) *), but we need to remember that indexing is generally unsigned!**
+		- **we generally do not need to know / care about the precise type (just use *auto* and decltype(s.size()) ), but we need to remember that indexing is generally unsigned!**
 		- valid range is >=0 && < size()
 			- **the result of using an index out of range is undefined.**
 			- **subscripting an empty string is undefined!**
@@ -83,7 +83,7 @@ string s6 = s1 + ", " + "world"; // ok, right equivalent to (s1 + ", ") + "world
 ~~~
 
 - processing strings
-	- ***cctype*** library has functions for interpreting characters and changing characteristics like upper/lowercase
+	- the ***cctype* header** has functions for interpreting characters and changing characteristics like upper/lowercase
 	- **range-based *for* loop** is good for processing every character in a string. (C++11)
 		- the *auto* type specifier is useful here.
 	- **to change the value of the characters in (nonconst) string, we must define the loop variable as a reference type.**
@@ -232,7 +232,7 @@ T arr[n] = {}; // zeroed array (value intialization)
 - processing 
 	- similar to vectors and strings, with the exception that arrays are fixed size.
 	- *range for* and *subscript operator [ ]* both access elements of array.
-		- use unsigned type ***size_t*** from the *cstddef* header to define variables used to subscript an array.
+		- **use unsigned type *size_t* from the *cstddef* header to define variables used to subscript an array.**
 	- as with strings and vectors, **remember to check that subscripts are kept in range!**
 - pointers and arrays
 	- **the compiler automatically substitutes the name of an array with a pointer to its first element.**
@@ -241,7 +241,7 @@ T arr[n] = {}; // zeroed array (value intialization)
 	- **pointers that address elements in an array support the same operations as *iterators* on vectors or strings**
 		- we can take the address of the nonexistent element one past the last element of an array to create something like the "off-the-end iterator".
 			- doing this directly is error-prone.
-		- the *iterator* library has functions ***begin(myArray)*** and ***end(myArray)*** that take an array as an argument and return the beginning and off-the-end pointers. (C++11)
+		- the ***iterator* header** has functions ***begin(myArray)*** and ***end(myArray)*** that take an array as an argument and return the beginning and off-the-end pointers. (C++11)
 - **pointer arithmetic**
 	- same operations as iterator arithmetic!
 		- result of subtracting two pointers is signed integral library type *ptrdiff_t*.
@@ -263,7 +263,7 @@ int (&refArray)[10] = arr; // refArray refers to an array of 10 ints
 - **use *vectors* and *strings* when you can!**
 
 
-## multi-dimensional arrays (3.5)
+## multi-dimensional arrays (3.6)
 
 ### new core ideas
 - operation is intuitive
@@ -288,4 +288,4 @@ for (auto &row : myMatrix) {
 ## things to follow up on
 - my program compiles and runs without the #include directive for cctype. is it necessary/good practice to include it anyways?
 	- same for *string*
-	- answer(?) - there is overlap in what headers define.
+	- answer - [include everything to guarantee functionality across different compilers](https://stackoverflow.com/questions/16506095/do-i-have-to-use-include-string-beside-iostream)
