--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -221,7 +221,7 @@ const double *const pip = &pi; // const pointer to object of type const double
 
 ### new core ideas
 - type aliases
-	- can be declared with the *typedef* keyword (old) or *alias declaration* with the *using* keyword (C++11)
+	- can be declared with the *typedef* keyword (old) or ***alias declaration* with the *using* keyword** (C++11)
 	- after being defined, type aliases can appear wherever a type name can appear
 	- can be tricky with pointers
 - ***auto*** type specifier (C++11)
