--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -41,7 +41,7 @@ string s3 = "value"; // s3 is a copy of the string literal (copy initialized)
 string s4(n, 'c'); // initialize s4 with n copies of the character 'c' (direct initialized)
 ~~~
 
-- **classes can define how objects are created/initialized, operations that are called by name, and what various operator symbols (<<, +, etc.) mean when applied to objects of the class' type.**
+- classes can define how objects are created/initialized, operations that are called by name, and what various operator symbols (<<, +, etc.) mean when applied to objects of the class' type.
 - string operations
 	- ***size()*** returns the **unsigned** type *string::size_type*
 	- the ***subscript operator [ ]*** also takes a *string::size_type* **(unsigned)** value that denotes the zero-indexed position of the character we want to access and returns a *reference* to that character.
