--- a/cpp_notebook/primer/ch-04.md
+++ b/cpp_notebook/primer/ch-04.md
@@ -16,6 +16,8 @@
 - order of evaluation
 	- the order in which operands are evaluated is largely unspecified and can lead to undefined behavior.
 		- exceptions: &&; ||; *conditional* ( ? : ) ; *comma* ,
+	- **serious bug if both operands refer/point to the same object and one of the operands changes that object.**	
+		- watch out for increments and decrements
 - type conversions
 	- **implicit conversions** 
 		- arithmetic types are defined to preserve precision if possible (convert to the widest type).
@@ -46,13 +48,14 @@ specific operators (mostly same as other languages, refer to documentation and p
 - assignment
 	- unlike other binary operators, assignment is right associative
 		- ival = jval = 0 becomes ival = (jval = 0), assuming type can be converted
-	- commonly used in conditions for readability
+	- assignment returns its left-hand operand (an lvalue)
+		- commonly used in conditions for readability
 		- need parentheses because assignments have low precedence
 - increment / decrement
 	- prefix returns the object itself as an lvalue (yielding the changed result)
 	- postfix returns a copy of the object's original value as an rvalue
-		- use postfix only when necessary
-		- commonly used &ast;pointer++ in while loops is equivalent to &ast;(pointer++), which means increment pointer and dereference the original value of pointer.
+		- postfix is used when we want to use the current value of a variable and increment it in a single compound expression.
+			- commonly used &ast;pointer++ in while loops is equivalent to &ast;(pointer++), which means increment pointer and dereference the original value of pointer.
 - *sizeof* returns the size, in bytes, of an expression or a type name
 	- it does not evaluate its operand (it doesn't need to fetch something to know its size)
 		- it doesn't matter to *sizeof* if a dereferenced invalid pointer is given as an argument, it just looks at the size of the type to which the pointer points
