--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -45,7 +45,7 @@
 		- **don't assume that the size of an int is a fixed and known value.**
 - two string literals that appear adjacent to one another and that are separated by only spaces, tabs, or newlines are automatically concatenated into a single literal.
 	- useful for writing string literal that's too large to fit comfortably on a single line
-- [an example use case of literal prefix](http://www.cplusplus.com/forum/beginner/106449/#msg576166)
+- [an example use case of literal suffix](http://www.cplusplus.com/forum/beginner/106449/#msg576166)
 
 
 ## variables (2.2)
@@ -59,7 +59,7 @@
 		- braced lists of initializers can be used.
 		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information (*int* type object being list-initialized with a *long double* initializer)
 	- ***default initialization***
-		- **without an explicit initializer, built-in type variables defined inside a function are uninitialized** 
+		- **without an explicit initializer, built-in type variables defined inside a function are uninitialized.** 
 			- defined outside any function body are initialized to zero.
 		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers
 			- for example, *std::string* default initializes to empty string no matter where it's defined.
@@ -96,13 +96,18 @@ extern double pi = 3.14; // defines pi (overriding extern keyword)
 int i = 1024, *p = &i, &r = i;
 ~~~
 
-- an **lvalue reference** (signified by a *declarator* with the *&* type modifier) refers to (**is another name for**) its initializer.
-	- **refers to a single object (its initializer) throughout its lifetime.**
-	- **references are not objects themselves.**
+- an (*lvalue*) **reference** (signified by a *declarator* with the *&* type modifier) refers to (is another name for) its initializer.
+	- refers to a single object (its initializer) throughout its lifetime.
+		- references may only be bound to an object, not to a literal or a more general expression (exception: reference to const).
+		- the type of the reference and the object to which it is bound must match exactly (exception: reference to const).
+		- references must be initialized.
+	- *all* operations on a reference are actually operations on the object to which the reference is bound.
+	- references are not objects themselves.
 - a **pointer** (signified by a *declarator* with the * type modifier) points to another type.
-	- **a pointer is an object in its own right**, unlike a reference.
-	- **a pointer holds the address of another object.**
+	- a pointer is an object in its own right, unlike a reference.
+	- a pointer holds the address of another object.
 		- **address-of operator &**
+		- the type of the pointer and the object to which it points to must match exactly (exception: pointer to const).
 	- the **dereference operator &ast;** yields the object that a pointer points to.
 		- can only be used on a valid pointer that points to an object.
 - pointer usage
@@ -114,12 +119,14 @@ int i = 1024, *p = &i, &r = i;
 	- we can use valid pointers in conditions
 		- null pointers evaluate to false
 		- nonzero pointers evaluate to true
-	- *void** pointers can hold the address of objects of any type, but cannot be dereferenced.
+	- a *void** pointers can hold the address of an object of any type, but cannot be dereferenced (we don't know the object's type).
+		- deals with memory as memory.
 - references to pointers, pointers to pointers
 
 ### misc conventions and tips
 - **the & and * symbols used in declarations have nothing to do with the & (address-of) and * (dereference) operators.**
 	- think of them as completely different symbols!
+- **read declarations from right to left.**
 - older programs might use a preprocessor variable named *NULL* from *cstdlib* to initialize a null pointer.
 	- modern c++ should use *nullptr* instead.
 - **initialize all pointers!**
@@ -171,8 +178,8 @@ const int &r1 = i; // reference to object of type const int
 - ***reference to const* just means we can't use that reference to modify the object to which the reference is bound.**
 	- whether a reference refers to a const or nonconst type affects what we can do with that reference, not whether we can alter the binding of the reference itself (we can't alter the binding of any reference). 
 	- const objects require the use of references to const, but references to const are not limited to use with const objects.
-- we can bind a *reference to const* to any expression that can be converted to the type of the reference, including:
-	- a **non**const object, a literal, or a more general expression.
+- we can bind a *reference to const* to any expression that can be *converted* to the type of the reference, including:
+	- a **nonconst** object, a literal, or a more general expression.
 	- behind the scenes: unnamed **temporary objects** are created by compiler to store results from evaluating expressions / conversions.
 
 ~~~
@@ -180,10 +187,10 @@ double dval = 3.14;
 const double *cptr = &dval; // pointer to object of type const double
 ~~~
 - ***pointers to const*** have the same general idea as references to const.
-	- **defining a pointer as a pointer to const affects only what we can do with the pointer.**
-	- we can use a pointer to const to point to a **non**const object
 	- we can store the address of a const object only in a pointer to const.
-- **important to remember that there is no guarantee that an object pointed to by a *pointer to const* won't change by other means.**
+	- but we can also use a pointer to const to point to a **nonconst** object that otherwise has the same type.
+	- **defining a pointer as a pointer to const affects only what we can do with the pointer.**
+	- **important to remember that there is no guarantee that an object pointed to by a *pointer to const* won't change by other means.**
 
 ~~~
 int errNumb = 0;
@@ -199,7 +206,9 @@ const double *const pip = &pi; // const pointer to object of type const double
 	- top-level const indicates that an object itself is const. it is ignored when we copy an object.
 	- low-level const indicates that a pointer or reference points/refers to a const (appears in the base type of compound types). 
 		- low-level const is never ignored.
-		- when we copy an object, both objects must have the same low-level const qualification or there must be a conversion between the types of the two objects.
+		- when we copy a reference/pointer, both operands must have the same low-level const qualification or the copied object (right side operand) must be able to convert to the left side's low-level const qualification.
+			- we can convert a low-level nonconst to a low-level const but not the other way around.
+			- note to self (idk if this is technically correct lol) think of low-level const as a restriction that we can add but not remove to make types match.
 	
 ***constant expressions*** (also see ch6)
 
