--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -84,7 +84,7 @@ string s6 = s1 + ", " + "world"; // ok, right equivalent to (s1 + ", ") + "world
 
 - processing strings
 	- the ***cctype* header** has functions for interpreting characters and changing characteristics like upper/lowercase
-	- **range-based *for* loop** is good for processing every character in a string. (C++11)
+	- [**range-based *for* loop**](insertlink) is good for processing every character in a string. (C++11)
 		- the *auto* type specifier is useful here.
 	- **to change the value of the characters in (nonconst) string, we must define the loop variable as a reference type.**
 ~~~
@@ -102,7 +102,6 @@ cout << punct_cnt << '\n';
 - the C++ library incorporates the C library. the C++ version of C library headers are c*name* (remove the .h suffix and precede the name with the letter 'c').
 	- when we include *cctype*, we are actually including the C++ version of the C library header *ctype.h*. 
 	- using the c*name* form in C++ lets us access the C library header's namespace through *std*.
-- [**general summary of how to declare types in ranged for loops!!**](https://stackoverflow.com/questions/15176104/c11-range-based-loop-get-item-by-value-or-reference-to-const)
 
 
 ## library *vector* type (3.3)
@@ -126,7 +125,7 @@ vector<T> v1; // default initialize empty vector of type T
 vector<T> v2 = v1; // v2 has a copy of each element in v1
 vector<T> v3 = {a, b, c}; // v3 is copy-list-initialized
 vector<T> v4(n, val); // v4 has n elements each with value val
-vector<T> v5(n); // v5 has n elements each with type T's default-initializing value
+vector<T> v5(n); // v5 has n elements each with type T's value-initializing value
 vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector corresponding to a separate int array
 ~~~
 
@@ -134,7 +133,6 @@ vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector correspondin
 	- ***push_back*** takes a value and "pushes" it as a new last element onto the "back" of the vector (appends value to vector).
 		- **note that a range *for* loop must not change the size of the sequence over which it is iterating.**
 	- other operations on vector are similar to operations on string.
-		- in a range *for*, use a reference to assign new values to the elements in a vector.
 		- **the *size()* operation and *subscript operator [ ]* use an unsigned type** (*vector< T >::size_type*).
 			- like with strings, subscript returns a *reference* to the element at the specified index.
 			- **remember to only subscript in range and on nonempty vectors, otherwise behavior is undefined!**
@@ -149,7 +147,7 @@ vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector correspondin
 - vectors grow efficiently.
 	- recall amortization in cs61b!
 	- only specify number of elements / initial value when you want all or most elements to have that initial value.
-- use range for loops wherever possible to avoid possible subscripting bugs.
+- use [range for loops]() wherever possible to avoid possible subscripting bugs.
 
 
 ## intro to iterators (3.4)
