add internal links

--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -84,7 +84,7 @@ string s6 = s1 + ", " + "world"; // ok, right equivalent to (s1 + ", ") + "world
 
 - processing strings
 	- the ***cctype* header** has functions for interpreting characters and changing characteristics like upper/lowercase
-	- [**range-based *for* loop**](insertlink) is good for processing every character in a string. (C++11)
+	- [**range-based *for* loop**](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-05.md#control-structures) is good for processing every character in a string. (C++11)
 		- the *auto* type specifier is useful here.
 	- **to change the value of the characters in (nonconst) string, we must define the loop variable as a reference type.**
 ~~~
@@ -147,7 +147,7 @@ vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector correspondin
 - vectors grow efficiently.
 	- recall amortization in cs61b!
 	- only specify number of elements / initial value when you want all or most elements to have that initial value.
-- use [range for loops]() wherever possible to avoid possible subscripting bugs.
+- use [range for loops](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-05.md#control-structures) wherever possible to avoid possible subscripting bugs.
 
 
 ## intro to iterators (3.4)
