add headers for linking, misc edits

--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -23,6 +23,7 @@ int main() {
 ### misc conventions and tips
 - **code in headers should not use *using* declarations**
 	- recall contents of a header are copied into the including programs text. if a header has a *using* declaration, then every program that includes that header gets that same *using* declaration.
+- [**the *(namespace)::* prefix usually improves readability / maintainability, so be wary of the advantages and disadvantages of doing this shortcut!**](https://stackoverflow.com/questions/1452721/why-is-using-namespace-std-considered-bad-practice)
 
 
 ## library *string* type (3.2)
