--- a/cpp_notebook/primer/ch-04.md
+++ b/cpp_notebook/primer/ch-04.md
@@ -18,29 +18,31 @@
 		- exceptions: &&; ||; *conditional* ( ? : ) ; *comma* ,
 	- **serious bug if both operands refer/point to the same object and one of the operands changes that object.**	
 		- watch out for increments and decrements
-- type conversions
-	- **implicit conversions** 
-		- arithmetic types are defined to preserve precision if possible (convert to the widest type).
-			- details in Primer
-		- in initializations, the intializer is converted to the type of the variable.
-		- in assignments, the right-hand operand is converted to the type of the left-hand operand.
-		- in conditions, non*bool* expressions are converted to *bool*.
-		- arrays are automatically converted to pointers to the first element in the array
-		- a pointer / reference to *T* can be converted into a pointer / reference to *const T*
-			- the reverse conversion does not exist
-		- class types can define conversions
-			- for example, the iostream library defines a conversion from *istream* to *bool* (ch1).
-	- **explicit conversions (casts)**
-		- **although necessary at times, casts are inherently dangerous!!!**
-		- *static_cast* can request any well-defined type conversions (excluding low-level const conversions).
-			- useful for things like requesting floating point arithmetic on objects defined as integral.
-		- *const_cast* "casts away" a low-level const, removing the compiler's write restriction.
-			- however, using a const_cast to write to a const object is undefined!
-			- useful in the context of overloaded functions (6.4), otherwise avoid!
-		- avoid *reinterpret_cast* and old style casts with parentheses.
 
-specific operators (mostly same as other languages, refer to documentation and precedence table in Primer)
+#### type conversions
+- **implicit conversions** 
+	- arithmetic types are defined to preserve precision if possible (convert to the widest type).
+		- details in Primer
+	- in initializations, the intializer is converted to the type of the variable.
+	- in assignments, the right-hand operand is converted to the type of the left-hand operand.
+	- in conditions, non*bool* expressions are converted to *bool*.
+	- arrays are automatically converted to pointers to the first element in the array
+	- a pointer / reference to *T* can be converted into a pointer / reference to *const T*
+		- the reverse conversion does not exist
+	- class types can define conversions
+		- for example, the iostream library defines a conversion from *istream* to *bool* (ch1).
+- **explicit conversions (casts)**
+	- **although necessary at times, casts are inherently dangerous!!!**
+	- *static_cast* can request any well-defined type conversions (excluding low-level const conversions).
+		- useful for things like requesting floating point arithmetic on objects defined as integral.
+	- *const_cast* "casts away" a low-level const, removing the compiler's write restriction.
+		- however, using a const_cast to write to a const object is undefined!
+		- useful in the context of overloaded functions (6.4), otherwise avoid!
+	- avoid *reinterpret_cast* and old style casts with parentheses.
 
+#### specific operators
+
+- (mostly same as other languages, refer to documentation and precedence table in Primer)
 - modulus operator
 	- works on integral types only
 	- m%(-n) == m%n 
