--- a/cpp_notebook/primer/ch-05.md
+++ b/cpp_notebook/primer/ch-05.md
@@ -2,11 +2,11 @@
 
 ## new core ideas
 - null statements for when the language requires a statement but program logic does not (i.e. some loops).
-- blocks and block scope
+- blocks denoted by brackets and **block scope**
 	- empty block is equivalent to null statement.
 
 #### control structures
-(skimmed)
+(most skimmed)
 
 - if / else
 	- *dangling else* problem
@@ -40,16 +40,19 @@
 
 
 #### intro to exception handling
-- *throw* raises an exception
-	- ***runtime_error*** is one of the standard library exception types defined in the ***stdexcept*** header.
-		- direct initialized with a string / string literal
-- try-catch handles exceptions
-	- catch clause includes exception declaration.
-	- library exception classes have a member function ***what()***. 
-		- for *runtime_error*, *what()* returns the message the error was initialized with.
+- *throw* can be used with a standard library exception type to raise an exception
+- *try-catch* handles exceptions
+	- catch clause(s) include exception declaration.
+	- library exception classes have a member function ***what()*** that return a C-style character string (string literal) with info about the exception. 
+- standard library exception types
+	- the ***stdexcept*** header defines several general-purpose exception classes like ***runtime_error***.
+		- there are also exception types defined in the *new* and *type_info* headers, covered in ch12 and ch19.
+	- most exception types are direct initialized with a string / string literal that is used by the programmer to provide additional error messaging.
+		- for these types, the *what()* member returns the message the exception was initialized with.
 - more on exception handling in ch18.
 
 ## misc conventions and tips
-- comment null statements, *break* omissions to let readers know it's intentional
+- comment null statements, *break* omissions to let readers know it's intentional,
+- writing robust *exception-safe code* that "cleans up" properly when an exception occurs isn't covered completely in Primer.
 
 ## things to follow up on
